<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="stopwatch_name">Stopwatch</string>
    <string name="countdown_clock_name">Routines Timer</string>
    <string name="app_name">SportTimer</string>
	<string name="settings_label">Settings</string>
	<string name="stopwatch_label">StopWatch</string>
	<string name="timer_label">RoutinesTimer</string>
	<string name="setting_label">Setting</string>
	<string name="exit_label">Exit</string>
	<string name="countdown_repeat">Routines Timer Repeat</string>
	<string name="countdown_repeat_summary">Routines Timer Repeat</string>
	<string name="time_input_title">Enter your time</string>
	<string name="text_input_title">Enter a routine name</string>
	<string name="enter_button">Enter</string>
	<string name="no_time_warning">Time cannot be 0</string>
	<string name="no_text_warning">Input text cannot be empty</string>
	<string name="default_routine_name">Untitled</string>
	<string name="routine_prompt">Select routine</string>
	<string name="interactive_textview_title">Routines</string>
	
	<!-- Help contents -->
	<string name="help_label">Guide</string>
	<string name="stopwatch_help_title">Stopwatch Guide</string>
	<string name="stopwatch_help_intro">Stopwatch is designed to measure the amount of time 
	    elapsed from a particular time when activated to when the piece is deactivated.</string>
	<string name="stopwatch_help_start_title">@string/start</string>
	<string name="stopwatch_help_start_text">Start the timer.</string>
	<string name="stopwatch_help_pause_title">@string/pause</string>
	<string name="stopwatch_help_pause_text">Pause the timer.</string>
	<string name="stopwatch_help_addlap_title">@string/add_lap</string>
	<string name="stopwatch_help_addlap_text">Record the current lap time.</string>
	<string name="stopwatch_help_reset_title">@string/reset</string>
	<string name="stopwatch_help_reset_text">Reset the timer and clear recorded laps.</string>
	
	<string name="countdown_timer_help_title">Routines Timer Guide</string>
	<string name="countdown_timer_help_intro">Routines timer is designed for countdown routines. 
	    It can also be use as a simple countdown timer.</string>
	<string name="countdown_timer_help_start_title">@string/start</string>
	<string name="countdown_timer_help_start_text">Start the countdown.</string>
	<string name="countdown_timer_help_pause_title">@string/pause</string>
	<string name="countdown_timer_help_pause_text">Pause the countdown</string>
	<string name="countdown_timer_help_stop_title">@string/stop</string>
	<string name="countdown_timer_help_stop_text">Stop the countdown completely.</string>
	<string name="countdown_timer_help_spinner_title">Routine Spinner</string>
	<string name="countdown_timer_help_spinner_text">A dropdown menu which can be use to 
	    select pre-programmed routines.</string>
	<string name="countdown_timer_help_add_title">@string/add</string>
	<string name="countdown_timer_help_add_text">Add a new programmable routines</string>
	<string name="countdown_timer_help_edit_title">@string/edit</string>
	<string name="countdown_timer_help_edit_text">Edit the name of the selected routines.</string>
	<string name="countdown_timer_help_remove_title">@string/remove</string>
	<string name="countdown_timer_help_remove_text">Remove the selected routines.</string>
	<string name="countdown_timer_help_addtime_title">@string/add_time</string>
	<string name="countdown_timer_help_addtime_text">Add a new routine to the current routines.</string>
	<string name="countdown_timer_help_edittime_title">@string/edit_time</string>
	<string name="countdown_timer_help_edittime_text">To edit or remove a routine from the list, long click the 
	    routine, and a function menu will pop out.</string>
		
	<string name="hour">Hour</string>
	<string name="min">Minute</string>
	<string name="sec">Second</string>
	
	<!-- Stopwatch Acitvity labels -->
	<string name="start">Start</string>
	<string name="stop">Stop</string>
	<string name="pause">Pause</string>
	<string name="reset">Reset</string>
	<string name="add_lap">Add Lap</string>
	
	<!-- Countdown timer Acitvity labels -->
	<string name="add_time">Add routine</string>
	<string name="edit_time">Edit routine</string>
	<string name="add">Add</string>
	<string name="edit">Edit</string>
	<string name="remove">Remove</string>
	
	<string name="text_input_hint">routines name</string>
	
	<string name="selected_routine_key">SelectedRoutine</string>
	
	<!-- Text to speech -->
	<string name="routine_finish_speech">Routine finished</string>
	
	<!-- AdView -->
	<string name="adview_publisher_id">a14fbefb53eee98</string>
</resources>