<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    android:padding="5dp"
	    android:background="@color/seashell">
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/countdown_timer_help_intro" 
	        style="@style/Title.Medium"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/countdown_timer_help_start_title" 
	        style="@style/Title.Large"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/countdown_timer_help_start_text" 
	        style="@style/Title.Small"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/countdown_timer_help_pause_title" 
	        style="@style/Title.Large"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/countdown_timer_help_pause_text" 
	        style="@style/Title.Small"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/countdown_timer_help_stop_title" 
	        style="@style/Title.Large"/>
	    <TextView
	        android:layout_width="match_parent"
			android:layout_height="wrap_content"	
	        android:text="@string/countdown_timer_help_stop_text" 
	        style="@style/Title.Small"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/countdown_timer_help_spinner_title" 
	        style="@style/Title.Large"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/countdown_timer_help_spinner_text" 
	        style="@style/Title.Small"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        
	        android:text="@string/countdown_timer_help_add_title" 
	        style="@style/Title.Large"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/countdown_timer_help_add_text" 
	        style="@style/Title.Small"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/countdown_timer_help_edit_title" 
	        style="@style/Title.Large"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/countdown_timer_help_edit_text" 
	        style="@style/Title.Small"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/countdown_timer_help_remove_title" 
	        style="@style/Title.Large"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/countdown_timer_help_remove_text" 
	        style="@style/Title.Small"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/countdown_timer_help_addtime_title" 
	        style="@style/Title.Large"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/countdown_timer_help_addtime_text" 
	        style="@style/Title.Small"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/countdown_timer_help_edittime_title" 
	        style="@style/Title.Large"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/countdown_timer_help_edittime_text" 
	        style="@style/Title.Small"/>
	</LinearLayout>
</ScrollView>