<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="5dp"
    android:background="@color/seashell">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stopwatch_help_intro" 
        style="@style/Title.Medium"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stopwatch_help_start_title" 
        style="@style/Title.Large"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stopwatch_help_start_text" 
        style="@style/Title.Small"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stopwatch_help_pause_title" 
        style="@style/Title.Large"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stopwatch_help_pause_text" 
        style="@style/Title.Small"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stopwatch_help_addlap_title" 
        style="@style/Title.Large"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stopwatch_help_addlap_text" 
        style="@style/Title.Small"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stopwatch_help_reset_title" 
        style="@style/Title.Large"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stopwatch_help_reset_text" 
        style="@style/Title.Small"/>
        

</LinearLayout>