<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5sp"
    android:background="@color/white" >
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/interactive_textview_title"
        style="@style/interactive_textview_title"/>
    <Spinner
        android:id="@+id/routine_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/routine_prompt"/>
    <RelativeLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
    	
    	<Button 
    	    android:id="@+id/add_routine_button"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_alignParentLeft="true"
    		
    		android:text="@string/add"/>
    	<Button
    	    android:id="@+id/edit_routine_button" 
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_toRightOf="@id/add_routine_button"
    		android:layout_alignTop="@id/add_routine_button"
    		android:text="@string/edit"/>
    	<Button 
    	    android:id="@+id/remove_routine_button"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_toRightOf="@id/edit_routine_button"
    		android:layout_alignTop="@id/edit_routine_button"
    		android:text="@string/remove"/>
    	
    	<Button 
    	    android:id="@+id/add_time_button"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_alignParentRight="true"
    		android:text="@string/add_time"/>
    	
    	
    		
    </RelativeLayout>
    <ListView android:id="@id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"        
        android:drawSelectorOnTop="false"
        android:cacheColorHint="@color/transparent"/>
</LinearLayout>