<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <fragment android:name="com.hook38.sporttimer.view.ClockView"
    	android:id="@+id/clock_fragment"
    	android:layout_weight="3"
    	android:layout_height="0sp"
    	android:layout_width="fill_parent"/>
	<LinearLayout 
	    android:layout_weight="1"
    	android:layout_height="0sp"
    	android:layout_width="fill_parent"
    	android:orientation="horizontal">    	    	
		    <Button
		        android:id="@+id/start_button"
		        android:layout_width="0sp"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:text="@string/start" />
		    
		    <Button
		        android:id="@+id/pause_button"
		        android:layout_width="0sp"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:text="@string/pause" />	
			<Button
		        android:id="@+id/stop_button"
		        android:layout_width="0sp"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:text="@string/stop" />	
    
	</LinearLayout>
	
	<fragment android:name="com.hook38.sporttimer.view.InteractiveListView"
	    android:id="@+id/listview_fragment"
	    android:layout_weight="5"
	    android:layout_height="0dp"
	    android:layout_width="fill_parent" />

</LinearLayout>