<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/stopwatch_mainLayout"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/ghost_white">		
    
    <LinearLayout 
	    android:layout_weight="3"
    	android:layout_height="0sp"
    	android:layout_width="fill_parent"
    	android:orientation="horizontal"
    	android:padding="5dp"
    	android:background="@color/cornsilk3">    
		<fragment android:name="com.hook38.sporttimer.view.ClockView"
	    	android:id="@+id/clock_fragment"
	    	android:layout_height="fill_parent"
	    	android:layout_width="fill_parent"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_weight="1"
    	android:layout_height="0sp"
    	android:layout_width="fill_parent"
    	android:orientation="horizontal"
    	android:padding="2dp">    	    	
		    <Button
		        android:id="@+id/start_button"
		        android:layout_width="0sp"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:text="@string/start" />
		    <Button
		        android:id="@+id/pause_button"
		        android:layout_width="0sp"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:text="@string/pause" />	
		    <Button
		        android:id="@+id/add_button"
		        android:layout_width="0sp"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:text="@string/add_lap" />	
	        <Button
		        android:id="@+id/reset_button"
		        android:layout_width="0sp"
		        android:layout_height="fill_parent"
		        android:layout_weight="1"
		        android:text="@string/reset" />		    
	</LinearLayout>
	<LinearLayout 
	    android:layout_weight="5"
    	android:layout_height="0sp"
    	android:layout_width="fill_parent"
    	android:orientation="horizontal"
    	android:background="@color/cornsilk3"
    	android:padding="5dp">    
	<fragment android:name="com.hook38.sporttimer.view.ListView"
	    android:id="@+id/listview_fragment"
	    android:layout_height="fill_parent"
	    android:layout_width="fill_parent" />
	</LinearLayout>
	<!-- 
	<com.google.ads.AdView
	    android:id="@+id/stopwatch_adview"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" 
	    ads:adUnitId="@string/adview_publisher_id"
	    ads:adSize="SMART_BANNER"
	    ads:testDevices="TEST_EMULATOR, 830EE031A875C3CE8E266182E91BBDB2"
	    ads:loadAdOnCreate="true"/>
	 -->
</LinearLayout>