<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="5dp">
    <LinearLayout 
        android:id="@+id/time_input_time_layout"
        style="@style/TimeInputEntireInputLayout">
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:orientation="vertical">

	        <LinearLayout 
	            style="@style/TimeInputTitleTextLayout">
	        	<TextView
	        	    android:id="@+id/time_input_hour_label"
	        	    android:layout_width="match_parent"
	        	    android:layout_height="wrap_content"
	        	    android:gravity="center"
	        	    android:text="@string/hour" />
			</LinearLayout>
			
        	<LinearLayout
        	   	style="@style/TimeInputModifierImageLayout">
	        	<ImageView
	        	    android:id="@+id/time_input_hour_plus_image"
	        	    android:layout_width="match_parent"
	        	    android:layout_height="match_parent"
	        	    android:src="@drawable/ic_menu_up" />
			</LinearLayout>
			
        	<LinearLayout
        	   	style="@style/TimeInputDigitsImageLayout"
        	   	android:gravity="center">
        	<ImageView
        	    android:id="@+id/time_input_hour_image"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:src="@drawable/ic_menu_digit0" />
        	</LinearLayout>

        	<LinearLayout
        	   	style="@style/TimeInputModifierImageLayout"
        	   	>
        	<ImageView
            	android:id="@+id/time_input_hour_minus_image"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:src="@drawable/ic_menu_down"/>
            </LinearLayout>  
	        
	    </LinearLayout>
	    
        <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:orientation="vertical">
	        <LinearLayout 
	            style="@style/TimeInputTitleTextLayout">
		        <TextView
		            android:id="@+id/time_input_min_label"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:text="@string/min" />
	        </LinearLayout>
	        
	        <LinearLayout
	        	   	style="@style/TimeInputModifierImageLayout">
	        <ImageView
	            android:id="@+id/time_input_min_plus_image"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:src="@drawable/ic_menu_up" />
	        </LinearLayout>

	        <LinearLayout
	            style="@style/TimeInputDigitsImageLayout">
	        	<ImageView
	            	android:id="@+id/time_input_left_min_image"
	            	android:layout_width="0dp"
	            	android:layout_weight="1"
	            	android:layout_height="wrap_content"
	            	android:src="@drawable/ic_menu_digit0" android:layout_gravity="top"/>
	        	<ImageView
	            	android:id="@+id/time_input_right_min_image"
	            	android:layout_weight="1"
	            	android:layout_width="0dp"
	            	android:layout_height="wrap_content"
	            	android:src="@drawable/ic_menu_digit0"/>
			</LinearLayout>
			
	        <LinearLayout
	        	   	style="@style/TimeInputModifierImageLayout">
        	<ImageView
            	android:id="@+id/time_input_min_minus_image"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:src="@drawable/ic_menu_down"/>
        	</LinearLayout>

	    </LinearLayout>
        
        <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:orientation="vertical">
	        <LinearLayout 
	            style="@style/TimeInputTitleTextLayout">
		        <TextView
		            android:id="@+id/time_input_sec_label"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center"
		            android:text="@string/sec" />
	        </LinearLayout>
	        
	        <LinearLayout
	        	   	style="@style/TimeInputModifierImageLayout">
	        <ImageView
	            android:id="@+id/time_input_sec_plus_image"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:src="@drawable/ic_menu_up" />
			</LinearLayout>
			
	        <LinearLayout
	            style="@style/TimeInputDigitsImageLayout">
	        	<ImageView
	            	android:id="@+id/time_input_left_sec_image"
	            	android:layout_weight="1"
	            	android:layout_width="0dp"
	            	android:layout_height="wrap_content"
	            	android:src="@drawable/ic_menu_digit0"/>
	        	<ImageView
	            	android:id="@+id/time_input_right_sec_image"
	            	android:layout_width="0dp"
	            	android:layout_weight="1"
	            	android:layout_height="wrap_content"
	            	android:src="@drawable/ic_menu_digit0"/>
			</LinearLayout>
			
	        <LinearLayout
	        	   	style="@style/TimeInputModifierImageLayout">
        	<ImageView
            	android:id="@+id/time_input_sec_minus_image"
            	android:layout_width="match_parent"
            	android:layout_height="match_parent"
            	android:src="@drawable/ic_menu_down"/>
        	</LinearLayout>

	    </LinearLayout>
	</LinearLayout>
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:padding="5sp"
	    android:layout_below="@id/time_input_time_layout">
        <Button 
            android:id="@+id/time_input_button"
            android:layout_height="wrap_content"
    	 	android:layout_width="wrap_content"
    	 	android:text="@string/enter_button" 
    	 	android:layout_alignParentRight="true"/>
	</RelativeLayout>
</RelativeLayout>